# robotics

./: README.md
ex1/wonderer/: CMakeLists.txt  my_stage.launch  package.xml
ex1/wonderer/src/: Wonderer.cpp  Wonderer.h  run_wonderer.cpp
ex2/: patrol_log
ex2/patrol_bot/: CMakeLists.txt  package.xml  setup.py  single_robot.rviz
ex2/patrol_bot/launch/: patrol_bot.launch
ex2/patrol_bot/move_base_config/: costmap_common_params.yaml
ex2/patrol_bot/src/patrol_bot/: patrol.py  planner.py  utils.py
ex2/patrol_bot/stage_config/maps/: willow-full-0.05_test.pgm
ex3/: design
ex3/coverage/: CMakeLists.txt  package.xml  r2d2.urdf  setup.py
ex3/coverage/launch/: coverage.launch  coverage_stage.launch
ex3/coverage/move_base_config/: amcl_node.xml  move_base.xml
ex3/coverage/src/coverage/: Mapreader.py  Position.py  Square.py  Square2d.py  coverage.py  robot.py
ex3/coverage/stage_config/worlds/: willow-pr2-2.5cm.world
ex3/coverage/urdf/: coverage_bot.urdf
ex4/formation/: CMakeLists.txt  README  package.xml  setup.py
ex4/formation/action/: StartFollow.action  start_follow.action
ex4/formation/launch/: formation.launch  park_formation.launch  robot.launch  robot_0.launch  robot_1.launch  robot_2.launch  robot_3.launch
ex4/formation/msg/: RobotLocation.msg  RobotStatus.msg
ex4/formation/src/formation/: follower.py  formation_robot.py  formation_robot_base.py  monitor.py  monitor_helper.py  my_utils.py  robot.py
ex4/formation/world/: maze.world  willow-multi-erratic.world  willow-pr2-2.5cm.world  willow-pr2-5cm.world
